feat: add pagination to counterparty endpoint
- Add pagination to getAllCounterparties endpoint
- Sort by name ASC for alphabetical ordering
- Add composite index (name, id) for performance
- Add comprehensive tests with 99% line coverage
- Default size: 50, max size: 500 (conservative approach)
- Remove unused repository methods